Edit Title of Program

--- a/project-3/index.html
+++ b/project-3/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="center">
-    <h1 class="title">Area Of Triangle Program</h1>
+    <h1 class="title">Area Of Right Angled Triangle Program</h1>
     <div class="container center">
         <div class="number-1">
             <label for="num1">Enter Base of Triangle</label>
