Upload of Project four Completion

--- a/project-4/index.html
+++ b/project-4/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="center">
-    <h1 class="title">Area Of Triangle Program</h1>
+    <h1 class="title">Program to Calculate Area of Equilateral Triangle</h1>
     <div class="container center">
         <div class="number-1">
             <label for="num1">Enter Side 'a' of Triangle</label>
@@ -31,10 +31,10 @@
         <div class="btn-box">
             <button class="calc">Calculate Area of Triangle</button>
         </div>
+        <p class="result"></p>
         <div class="reset-btn">
             <button class="reset-btn">Reset Input Values</button>
         </div>
-        <p class="result"></p>
 
     </div>
 </body>
